styling home blog

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,11 +1,31 @@
-@import url('https://fonts.googleapis.com/css?family=Coustard');
-
-:root {
-  --font-portofolio: 'Coustard', serif;
+/* --- setup font --- */
+@font-face {
+  font-family: 'Coustard';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(./fonts/Coustard-Reguler.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
 }
 
-html {
+@font-face {
+  font-family: 'Sniglet';
+  font-style: normal;
+  font-weight: 400;
   font-display: swap;
+  src: url(./fonts/Sniglet-Reguler.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
+}
+
+:root {
+  --font-portofolio: 'Coustard', serif, Arial, Helvetica, sans-serif;
+  --font-blog: 'Sniglet', serif, Arial, Helvetica, sans-serif;
+  --primary-color: #56b6c2;
+  --profile-size: 4.5rem;
 }
 
 a {
@@ -13,24 +33,56 @@ a {
   text-decoration: none;
 }
 
-/* custom responsinve */
-@media (max-width: 425px) {
+/* --- setup responsinve --- */
+/* Mobile small and up */
+@media (min-width: 320px) {
+  .container-blog .jokes {
+    display: none;
+  }
+
   .header-wrapper {
-    padding: 2vh 1.5vh !important;
+    padding: 2vh 1.5vh;
   }
 
   .layout-home .title {
-    font-size: 30px !important;
-    margin: 0 0 10px 0 !important;
+    font-size: 30px;
+    margin: 0 0 10px 0;
+  }
+
+  .layout-blog {
+    padding-top: 1.5rem;
   }
 }
 
-/* component style */
+/* Table and up */
+@media (min-width: 768px) {
+  .container-blog .jokes {
+    display: flex;
+  }
+
+  .header-wrapper {
+    padding: 5vh 10vh;
+  }
+
+  .layout-home .title {
+    font-size: 50px;
+    margin: 0;
+  }
+
+  .container {
+    max-width: 50%;
+  }
+
+  .layout-blog {
+    padding-top: 3rem;
+  }
+}
+
+/* --- component style --- */
 .header-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5vh 10vh;
   font-family: var(--font-portofolio);
   font-size: 15px;
   color: #212121;
@@ -62,7 +114,7 @@ a {
   align-items: center;
 }
 
-/* Layout Home Style */
+/* --- Layout Home Style --- */
 .layout-home {
   display: flex;
   font-family: var(--font-portofolio);
@@ -71,11 +123,6 @@ a {
   flex-direction: column;
   min-height: 75vh;
   text-align: center;
-}
-
-.layout-home .title {
-  font-size: 50px;
-  margin: 0;
 }
 
 .layout-home .contact-container {
@@ -90,4 +137,66 @@ a {
   width: 40vh;
   justify-content: space-between;
   align-items: center;
+}
+
+/* --- Layout list of blog --- */
+.layout-blog {
+  background-color: #282c34;
+  color: #d7dae0;
+  font-family: var(--font-blog);
+}
+
+.container {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.profile-img {
+  width: var(--profile-size);
+  height: var(--profile-size);
+  border-radius: 50%;
+}
+
+.container-blog .name-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+  max-width: 26vh;
+  justify-content: center;
+}
+
+.container-blog .jokes {
+  flex: 1;
+  align-items: center;
+  font-size: 22px;
+  margin-left: 10pt;
+}
+
+.container-blog .img-container {
+  display: flex;
+  flex: 1;
+  justify-content: flex-end;
+}
+
+.name-container .title {
+  font-size: 25px;
+  color: var(--primary-color);
+}
+
+.name-container .contact {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.container-content {
+  margin-top: 3rem;
+}
+
+.container-content .title {
+  font-size: 30px;
+  margin-bottom: 0.5rem;
+  color: #43d0e1;
 }
