--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,7 +27,7 @@
 }
 
 @font-face {
-  font-family: 'InputMono';
+  font-family: 'InputMono-Medium';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
