--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -279,3 +279,15 @@ Add the correct display in Chrome and Safari.
 summary {
   display: list-item;
 }
+
+/* remove margin typography */
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
