--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,10 @@
----
-//
----
-
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>Adib Firman | Web Platform Engineer</title>
   </head>
   <body>
     <h1>Astro</h1>
