--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,9 +9,9 @@ const activePathname = Astro.url.pathname;
   <WrapperMobileNavigation pathname={activePathname} client:only />
 
   <header class="text-center mb-12 md:mb-16">
-    <h1 class="text-4xl md:text-6xl mb-4 tracking-wider">JANE DOE</h1>
+    <h1 class="text-4xl md:text-6xl mb-4 tracking-wider">Adib Firman</h1>
     <p class="text-lg md:text-xl text-gray-300 max-w-md mx-auto">
-      Creative Developer & Digital Artist
+      Software Engineer, Web Platform
     </p>
   </header>
 
