--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,16 +4,12 @@ import Layout from "@/layouts/Layout.astro";
 
 <Layout>
   <div class="transition-opacity duration-500 max-w-2xl w-full">
-    <h2 class="text-2xl md:text-3xl mb-3 tracking-wide">Hi There..!!</h2>
-    <p class="text-gray-300 mb-6 text-sm md:text-base">
-      Exploring the intersection of design, technology, and human experience.
-    </p>
+    <h2 class="text-2xl md:text-3xl mb-3 tracking-wide">Hi There...!!</h2>
     <div class="space-y-4">
       <p class="text-gray-300 leading-relaxed">
-        I'm a multidisciplinary creator working at the intersection of design
-        and technology. With a background in both visual arts and programming, I
-        craft digital experiences that are both functional and aesthetically
-        compelling.
+        I'm Adib Firman, I'm software engineer from 🇮🇩 (Indonesia) day-by-day
+        working and learn a fun things about Web Ecosystem, and occasionally
+        planting seed on my own digital garden.
       </p>
     </div>
   </div>
