--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,16 +1,19 @@
 ---
+import { readdir } from "fs/promises";
 import { ArrowRight } from "lucide-react";
+
 import Layout from "@/layouts/Layout.astro";
-import { blogPosts } from "@/lib/blog-data";
-import { formatDate } from "@/lib/utils";
+import { formatDate, getListBlog } from "@/lib/utils";
+
+const blogPosts = await getListBlog();
 ---
 
 <Layout>
   <div class="transition-opacity duration-500 max-w-2xl w-full">
     <h2 class="text-2xl md:text-3xl mb-3 tracking-wide">Piece of mind</h2>
     <p class="text-gray-300 mb-6 text-sm md:text-base">
-      Thoughts, ideas, who knows? it's just an open space where I share my
-      knowledge and my opinion about what I've learn something about.
+      Thoughts, ideas, who knows? It's just an open space where I share my
+      knowledge and my opinion about what I've learned.
     </p>
     <div class="space-y-8">
       {
