--- a/app/app.css
+++ b/app/app.css
@@ -1,9 +1,12 @@
 @import "tailwindcss";
 
 @theme {
-  --font-sans:
-    "Inter", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  /* --font-sans: */
+  /*   "Inter", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", */
+  /*   "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
+  --font-heading: "Montserrat", sans-serif;
+  --font-body: "Lato", sans-serif;
+  --font-mono: "Fira Code", monospace;
 
   --color-mystic-bg: #1b1e34;
   --color-mystic-dark: #2d3250;
