migration several articles

--- a/app/app.css
+++ b/app/app.css
@@ -3,7 +3,7 @@
 @theme {
   --font-heading: "Montserrat", sans-serif;
   --font-body: "Lato", sans-serif;
-  --font-mono: "Fira Code", monospace;
+  --font-mono: "Fira Code Italic", monospace;
 
   --color-mystic-bg: #1b1e34;
   --color-mystic-dark: #2d3250;
